@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (C) 2020, 2021 Frédéric Bard
+ * Copyright (C) 2020, 2025 Frédéric Bard
  *
  * This program is free software; you can redistribute it and/or modify it under
  * the terms of the GNU General Public License as published by the Free Software
@@ -28,7 +28,6 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 import net.tourbook.Messages;
 import net.tourbook.application.TourbookPlugin;
@@ -46,6 +45,7 @@ import net.tourbook.importdata.RawDataManager.TourValueType;
 import net.tourbook.importdata.ReImportStatus;
 import net.tourbook.tour.TourEventId;
 import net.tourbook.tour.TourLogManager;
+import net.tourbook.tour.TourLogManager.AutoOpenEvent;
 import net.tourbook.tour.TourManager;
 
 import org.eclipse.core.runtime.IProgressMonitor;
@@ -64,6 +64,7 @@ import org.eclipse.swt.SWT;
 import org.eclipse.swt.custom.BusyIndicator;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
+import org.eclipse.swt.events.SelectionListener;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.graphics.Point;
@@ -75,38 +76,40 @@ import org.eclipse.swt.widgets.Display;
 import org.eclipse.swt.widgets.Group;
 import org.eclipse.swt.widgets.Shell;
 
-public class DialogReimportTours extends TitleAreaDialog {
+class DialogReimportTours extends TitleAreaDialog {
 
-   private static final String STATE_REIMPORT_TOURS_ALL                     = "STATE_REIMPORT_TOURS_ALL";                     //$NON-NLS-1$
-   private static final String STATE_REIMPORT_TOURS_SELECTED                = "STATE_REIMPORT_TOURS_SELECTED";                //$NON-NLS-1$
+   private static final String STATE_REIMPORT_TOURS_ALL                           = "STATE_REIMPORT_TOURS_ALL";                           //$NON-NLS-1$
+   private static final String STATE_REIMPORT_TOURS_SELECTED                      = "STATE_REIMPORT_TOURS_SELECTED";                      //$NON-NLS-1$
 
-   private static final String STATE_REIMPORT_TOURS_BETWEEN_DATES           = "STATE_REIMPORT_TOURS_BETWEEN_DATES";           //$NON-NLS-1$
-   private static final String STATE_REIMPORT_TOURS_BETWEEN_DATES_FROM      = "STATE_REIMPORT_TOURS_BETWEEN_DATES_FROM";      //$NON-NLS-1$
-   private static final String STATE_REIMPORT_TOURS_BETWEEN_DATES_UNTIL     = "STATE_REIMPORT_TOURS_BETWEEN_DATES_UNTIL";     //$NON-NLS-1$
+   private static final String STATE_REIMPORT_TOURS_BETWEEN_DATES                 = "STATE_REIMPORT_TOURS_BETWEEN_DATES";                 //$NON-NLS-1$
+   private static final String STATE_REIMPORT_TOURS_BETWEEN_DATES_FROM            = "STATE_REIMPORT_TOURS_BETWEEN_DATES_FROM";            //$NON-NLS-1$
+   private static final String STATE_REIMPORT_TOURS_BETWEEN_DATES_UNTIL           = "STATE_REIMPORT_TOURS_BETWEEN_DATES_UNTIL";           //$NON-NLS-1$
 
-   private static final String STATE_IS_IMPORT_ALL_TIME_SLICES              = "STATE_IS_IMPORT_ALL_TIME_SLICES";              //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_ENTIRE_TOUR                  = "STATE_IS_IMPORT_ENTIRE_TOUR";                  //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_ALL_TIME_SLICES                    = "STATE_IS_IMPORT_ALL_TIME_SLICES";                    //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_ENTIRE_TOUR                        = "STATE_IS_IMPORT_ENTIRE_TOUR";                        //$NON-NLS-1$
 
-   private static final String STATE_IS_IMPORT_TOUR__CALORIES               = "STATE_IS_IMPORT_TOUR__CALORIES";               //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TOUR__FILE_LOCATION          = "STATE_IS_IMPORT_TOUR__FILE_LOCATION";          //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TOUR__MARKERS                = "STATE_IS_IMPORT_TOUR__MARKERS";                //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TOUR__CALORIES                     = "STATE_IS_IMPORT_TOUR__CALORIES";                     //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TOUR__FILE_LOCATION                = "STATE_IS_IMPORT_TOUR__FILE_LOCATION";                //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TOUR__MARKERS                      = "STATE_IS_IMPORT_TOUR__MARKERS";                      //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TOUR__WEATHER                      = "STATE_IS_IMPORT_TOUR__WEATHER";                      //$NON-NLS-1$
 
-   private static final String STATE_IS_IMPORT_TIME_SLICE__BATTERY          = "STATE_IS_IMPORT_TIME_SLICE__BATTERY";          //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TIME_SLICE__CADENCE          = "STATE_IS_IMPORT_TIME_SLICE__CADENCE";          //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TIME_SLICE__ELEVATION        = "STATE_IS_IMPORT_TIME_SLICE__ELEVATION";        //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TIME_SLICE__GEAR             = "STATE_IS_IMPORT_TIME_SLICE__GEAR";             //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TIME_SLICE__POWER_AND_PULSE  = "STATE_IS_IMPORT_TIME_SLICE__POWER_AND_PULSE";  //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TIME_SLICE__POWER_AND_SPEED  = "STATE_IS_IMPORT_TIME_SLICE__POWER_AND_SPEED";  //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TIME_SLICE__RUNNING_DYNAMICS = "STATE_IS_IMPORT_TIME_SLICE__RUNNING_DYNAMICS"; //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TIME_SLICE__SWIMMING         = "STATE_IS_IMPORT_TIME_SLICE__SWIMMING";         //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TIME_SLICE__TEMPERATURE      = "STATE_IS_IMPORT_TIME_SLICE__TEMPERATURE";      //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TIME_SLICE__TRAINING         = "STATE_IS_IMPORT_TIME_SLICE__TRAINING";         //$NON-NLS-1$
-   private static final String STATE_IS_IMPORT_TIME_SLICE__TIMER_PAUSES     = "STATE_IS_IMPORT_TIME_SLICE__TIMER_PAUSES";     //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__BATTERY                = "STATE_IS_IMPORT_TIME_SLICE__BATTERY";                //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__CADENCE                = "STATE_IS_IMPORT_TIME_SLICE__CADENCE";                //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__ELEVATION              = "STATE_IS_IMPORT_TIME_SLICE__ELEVATION";              //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__GEAR                   = "STATE_IS_IMPORT_TIME_SLICE__GEAR";                   //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__POWER_AND_PULSE        = "STATE_IS_IMPORT_TIME_SLICE__POWER_AND_PULSE";        //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__POWER_AND_SPEED        = "STATE_IS_IMPORT_TIME_SLICE__POWER_AND_SPEED";        //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__RADAR                  = "STATE_IS_IMPORT_TIME_SLICE__RADAR";                  //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__RUNNING_DYNAMICS       = "STATE_IS_IMPORT_TIME_SLICE__RUNNING_DYNAMICS";       //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__SWIMMING               = "STATE_IS_IMPORT_TIME_SLICE__SWIMMING";               //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__TEMPERATURE_FROMDEVICE = "STATE_IS_IMPORT_TIME_SLICE__TEMPERATURE_FROMDEVICE"; //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__TRAINING               = "STATE_IS_IMPORT_TIME_SLICE__TRAINING";               //$NON-NLS-1$
+   private static final String STATE_IS_IMPORT_TIME_SLICE__TIMER_PAUSES           = "STATE_IS_IMPORT_TIME_SLICE__TIMER_PAUSES";           //$NON-NLS-1$
 
-   private static final String STATE_IS_LOG_DETAILS                         = "STATE_IS_LOG_DETAILS";                         //$NON-NLS-1$
-   private static final String STATE_IS_SKIP_TOURS_WITH_IMPORTFILE_NOTFOUND = "STATE_IS_SKIP_TOURS_WITH_IMPORTFILE_NOTFOUND"; //$NON-NLS-1$
+   private static final String STATE_IS_LOG_DETAILS                               = "STATE_IS_LOG_DETAILS";                               //$NON-NLS-1$
+   private static final String STATE_IS_SKIP_TOURS_WITH_IMPORTFILE_NOTFOUND       = "STATE_IS_SKIP_TOURS_WITH_IMPORTFILE_NOTFOUND";       //$NON-NLS-1$
 
-   private static final int    VERTICAL_SECTION_MARGIN                      = 10;
+   private static final int    VERTICAL_SECTION_MARGIN                            = 10;
 
    //
    private static final IDialogSettings    _state          = TourbookPlugin.getState("DialogReimportTours"); //$NON-NLS-1$
@@ -139,7 +142,7 @@ public class DialogReimportTours extends TitleAreaDialog {
 
    private final ITourViewer3 _tourViewer;
 
-   private SelectionAdapter   _defaultListener;
+   private SelectionListener  _defaultListener;
 
    private PixelConverter     _pc;
 
@@ -165,12 +168,14 @@ public class DialogReimportTours extends TitleAreaDialog {
    private Button    _chkData_Tour_ImportFileLocation;
    private Button    _chkData_TimeSlice_PowerAndPulse;
    private Button    _chkData_TimeSlice_PowerAndSpeed;
+   private Button    _chkData_TimeSlice_Radar;
    private Button    _chkData_TimeSlice_RunningDynamics;
    private Button    _chkData_TimeSlice_Swimming;
-   private Button    _chkData_TimeSlice_Temperature;
+   private Button    _chkData_TimeSlice_TemperatureFromDevice;
    private Button    _chkData_TimeSlice_Training;
    private Button    _chkData_Tour_Markers;
    private Button    _chkData_TimeSlice_TourTimerPauses;
+   private Button    _chkData_Tour_Weather;
 
    private Button    _chkLogDetails;
    private Button    _chkSkipTours_With_ImportFile_NotFound;
@@ -186,11 +191,8 @@ public class DialogReimportTours extends TitleAreaDialog {
 
    private Group     _groupTours;
 
-   /**
-    * @param parentShell
-    */
-   public DialogReimportTours(final Shell parentShell,
-                              final ITourViewer3 tourViewer) {
+   DialogReimportTours(final Shell parentShell,
+                       final ITourViewer3 tourViewer) {
 
       super(parentShell);
 
@@ -254,7 +256,7 @@ public class DialogReimportTours extends TitleAreaDialog {
       createUI(dlgContainer);
 
       // must be run async because the dark theme is overwriting colors after calling createDialogArea()
-      _parent.getDisplay().asyncExec(this::updateUI_LockUnlockButtons);
+      _parent.getDisplay().asyncExec(() -> updateUI_LockUnlockButtons());
 
       return dlgContainer;
    }
@@ -442,6 +444,15 @@ public class DialogReimportTours extends TitleAreaDialog {
             _chkData_Tour_Markers.addSelectionListener(_defaultListener);
             gridDataItem.applyTo(_chkData_Tour_Markers);
          }
+         {
+            /*
+             * Weather (description and clouds)
+             */
+            _chkData_Tour_Weather = new Button(containerTour, SWT.CHECK);
+            _chkData_Tour_Weather.setText(Messages.Dialog_ModifyTours_Checkbox_WeatherValues);
+            _chkData_Tour_Weather.addSelectionListener(_defaultListener);
+            gridDataItem.applyTo(_chkData_Tour_Weather);
+         }
       }
 
       {
@@ -477,12 +488,12 @@ public class DialogReimportTours extends TitleAreaDialog {
          }
          {
             /*
-             * Running Dynamics
+             * Radar
              */
-            _chkData_TimeSlice_RunningDynamics = new Button(containerTimeSlices, SWT.CHECK);
-            _chkData_TimeSlice_RunningDynamics.setText(Messages.Dialog_ModifyTours_Checkbox_RunningDynamicsValues);
-            _chkData_TimeSlice_RunningDynamics.addSelectionListener(_defaultListener);
-            gridDataItem.applyTo(_chkData_TimeSlice_RunningDynamics);
+            _chkData_TimeSlice_Radar = new Button(containerTimeSlices, SWT.CHECK);
+            _chkData_TimeSlice_Radar.setText(Messages.Dialog_ModifyTours_Checkbox_RadarValues);
+            _chkData_TimeSlice_Radar.addSelectionListener(_defaultListener);
+            gridDataItem.applyTo(_chkData_TimeSlice_Radar);
          }
 
          // row 2
@@ -497,12 +508,12 @@ public class DialogReimportTours extends TitleAreaDialog {
          }
          {
             /*
-             * Swimming
+             * Running Dynamics
              */
-            _chkData_TimeSlice_Swimming = new Button(containerTimeSlices, SWT.CHECK);
-            _chkData_TimeSlice_Swimming.setText(Messages.Dialog_ModifyTours_Checkbox_SwimmingValues);
-            _chkData_TimeSlice_Swimming.addSelectionListener(_defaultListener);
-            gridDataItem.applyTo(_chkData_TimeSlice_Swimming);
+            _chkData_TimeSlice_RunningDynamics = new Button(containerTimeSlices, SWT.CHECK);
+            _chkData_TimeSlice_RunningDynamics.setText(Messages.Dialog_ModifyTours_Checkbox_RunningDynamicsValues);
+            _chkData_TimeSlice_RunningDynamics.addSelectionListener(_defaultListener);
+            gridDataItem.applyTo(_chkData_TimeSlice_RunningDynamics);
          }
 
          // row 3
@@ -517,12 +528,12 @@ public class DialogReimportTours extends TitleAreaDialog {
          }
          {
             /*
-             * Temperature
+             * Swimming
              */
-            _chkData_TimeSlice_Temperature = new Button(containerTimeSlices, SWT.CHECK);
-            _chkData_TimeSlice_Temperature.setText(Messages.Dialog_ModifyTours_Checkbox_TemperatureValues);
-            _chkData_TimeSlice_Temperature.addSelectionListener(_defaultListener);
-            gridDataItem.applyTo(_chkData_TimeSlice_Temperature);
+            _chkData_TimeSlice_Swimming = new Button(containerTimeSlices, SWT.CHECK);
+            _chkData_TimeSlice_Swimming.setText(Messages.Dialog_ModifyTours_Checkbox_SwimmingValues);
+            _chkData_TimeSlice_Swimming.addSelectionListener(_defaultListener);
+            gridDataItem.applyTo(_chkData_TimeSlice_Swimming);
          }
 
          // row 4
@@ -537,12 +548,12 @@ public class DialogReimportTours extends TitleAreaDialog {
          }
          {
             /*
-             * Timer pauses
+             * Temperature
              */
-            _chkData_TimeSlice_TourTimerPauses = new Button(containerTimeSlices, SWT.CHECK);
-            _chkData_TimeSlice_TourTimerPauses.setText(Messages.Dialog_ModifyTours_Checkbox_TourTimerPauses);
-            _chkData_TimeSlice_TourTimerPauses.addSelectionListener(_defaultListener);
-            gridDataItem.applyTo(_chkData_TimeSlice_TourTimerPauses);
+            _chkData_TimeSlice_TemperatureFromDevice = new Button(containerTimeSlices, SWT.CHECK);
+            _chkData_TimeSlice_TemperatureFromDevice.setText(Messages.Dialog_ModifyTours_Checkbox_TemperatureValues_FromDevice);
+            _chkData_TimeSlice_TemperatureFromDevice.addSelectionListener(_defaultListener);
+            gridDataItem.applyTo(_chkData_TimeSlice_TemperatureFromDevice);
          }
 
          // row 5
@@ -557,12 +568,12 @@ public class DialogReimportTours extends TitleAreaDialog {
          }
          {
             /*
-             * Training
+             * Timer pauses
              */
-            _chkData_TimeSlice_Training = new Button(containerTimeSlices, SWT.CHECK);
-            _chkData_TimeSlice_Training.setText(Messages.Dialog_ModifyTours_Checkbox_TrainingValues);
-            _chkData_TimeSlice_Training.addSelectionListener(_defaultListener);
-            gridDataItem.applyTo(_chkData_TimeSlice_Training);
+            _chkData_TimeSlice_TourTimerPauses = new Button(containerTimeSlices, SWT.CHECK);
+            _chkData_TimeSlice_TourTimerPauses.setText(Messages.Dialog_ModifyTours_Checkbox_TourTimerPauses);
+            _chkData_TimeSlice_TourTimerPauses.addSelectionListener(_defaultListener);
+            gridDataItem.applyTo(_chkData_TimeSlice_TourTimerPauses);
          }
 
          // row 6
@@ -574,6 +585,15 @@ public class DialogReimportTours extends TitleAreaDialog {
             _chkData_TimeSlice_PowerAndSpeed.setText(Messages.Dialog_ModifyTours_Checkbox_PowerAndSpeedValues);
             _chkData_TimeSlice_PowerAndSpeed.addSelectionListener(_defaultListener);
             gridDataItem.applyTo(_chkData_TimeSlice_PowerAndSpeed);
+         }
+         {
+            /*
+             * Training
+             */
+            _chkData_TimeSlice_Training = new Button(containerTimeSlices, SWT.CHECK);
+            _chkData_TimeSlice_Training.setText(Messages.Dialog_ModifyTours_Checkbox_TrainingValues);
+            _chkData_TimeSlice_Training.addSelectionListener(_defaultListener);
+            gridDataItem.applyTo(_chkData_TimeSlice_Training);
          }
       }
    }
@@ -780,7 +800,7 @@ public class DialogReimportTours extends TitleAreaDialog {
 
       final long start = System.currentTimeMillis();
 
-      TourLogManager.showLogView();
+      TourLogManager.showLogView(AutoOpenEvent.TOUR_IMPORT);
 
       final RawDataManager rawDataManager = RawDataManager.getInstance();
 
@@ -867,13 +887,13 @@ public class DialogReimportTours extends TitleAreaDialog {
 
       } finally {
 
-         // do post save actions for all re-imported tours, simalar to
+         // do post save actions for all re-imported tours, similar to
          // net.tourbook.database.TourDatabase.saveTour_PostSaveActions(TourData)
 
          TourDatabase.saveTour_PostSaveActions_Concurrent_2_ForAllTours(
                allReimportedTourIds
                      .stream()
-                     .collect(Collectors.toList()));
+                     .toList());
       }
 
       if (reImportStatus.isAnyTourReImported.get()) {
@@ -881,14 +901,14 @@ public class DialogReimportTours extends TitleAreaDialog {
          rawDataManager.updateTourData_InImportView_FromDb(null);
 
          // reselect tours, run in UI thread
-         Display.getDefault().asyncExec(_tourViewer::reloadViewer);
+         Display.getDefault().asyncExec(() -> _tourViewer.reloadViewer());
       }
 
       TourLogManager.log_DEFAULT(String.format(
             Messages.Log_Reimport_PreviousFiles_End,
             (System.currentTimeMillis() - start) / 1000.0));
 
-      doReimport_70_FireModifyEvents(importState_Process);
+      doReimport_70_FireModifyEvents();
    }
 
    private void doReimport_60_RunConcurrent(final long tourId,
@@ -950,7 +970,7 @@ public class DialogReimportTours extends TitleAreaDialog {
       });
    }
 
-   private void doReimport_70_FireModifyEvents(final ImportState_Process importState_Process) {
+   private void doReimport_70_FireModifyEvents() {
 
       TourManager.getInstance().removeAllToursFromCache();
       TourManager.fireEvent(TourEventId.CLEAR_DISPLAYED_TOUR);
@@ -974,45 +994,48 @@ public class DialogReimportTours extends TitleAreaDialog {
 
       final boolean isTimeSlice = isPartOfATourSelected && isAllTimeSlicesSelected == false;
 
-      final boolean isTourSelected = false ||
+      final boolean isTourSelected = false
 
-            _rdoReimport_Tours_All.getSelection() ||
-            _rdoReimport_Tours_Selected.getSelection() ||
-            isTourBetweenDates;
+            || _rdoReimport_Tours_All.getSelection()
+            || _rdoReimport_Tours_Selected.getSelection()
+            || isTourBetweenDates;
 
-      final boolean isTimeSliceSelected = false ||
+      final boolean isTimeSliceSelected = false
 
-            _chkData_TimeSlice_Battery.getSelection() ||
-            _chkData_TimeSlice_Cadence.getSelection() ||
-            _chkData_TimeSlice_Elevation.getSelection() ||
-            _chkData_TimeSlice_Gear.getSelection() ||
-            _chkData_TimeSlice_PowerAndPulse.getSelection() ||
-            _chkData_TimeSlice_PowerAndSpeed.getSelection() ||
-            _chkData_TimeSlice_RunningDynamics.getSelection() ||
-            _chkData_TimeSlice_Swimming.getSelection() ||
-            _chkData_TimeSlice_Temperature.getSelection() ||
-            _chkData_TimeSlice_Training.getSelection() ||
-            _chkData_TimeSlice_TourTimerPauses.getSelection();
+            || _chkData_TimeSlice_Battery.getSelection()
+            || _chkData_TimeSlice_Cadence.getSelection()
+            || _chkData_TimeSlice_Elevation.getSelection()
+            || _chkData_TimeSlice_Gear.getSelection()
+            || _chkData_TimeSlice_PowerAndPulse.getSelection()
+            || _chkData_TimeSlice_PowerAndSpeed.getSelection()
+            || _chkData_TimeSlice_Radar.getSelection()
+            || _chkData_TimeSlice_RunningDynamics.getSelection()
+            || _chkData_TimeSlice_Swimming.getSelection()
+            || _chkData_TimeSlice_TemperatureFromDevice.getSelection()
+            || _chkData_TimeSlice_Training.getSelection()
+            || _chkData_TimeSlice_TourTimerPauses.getSelection();
 
-      final boolean isTourDataSelected = false ||
+      final boolean isTourDataSelected = false
 
-            _chkData_Tour_Calories.getSelection() ||
-            _chkData_Tour_ImportFileLocation.getSelection() ||
-            _chkData_Tour_Markers.getSelection();
+            || _chkData_Tour_Calories.getSelection()
+            || _chkData_Tour_ImportFileLocation.getSelection()
+            || _chkData_Tour_Markers.getSelection()
+            || _chkData_Tour_Weather.getSelection();
 
-      final boolean isDataSelected = false ||
+      final boolean isDataSelected = false
 
-            _rdoData_EntireTour.getSelection() ||
-            _chkData_AllTimeSlices.getSelection() ||
+            || _rdoData_EntireTour.getSelection()
+            || _chkData_AllTimeSlices.getSelection()
 
-            isTourDataSelected ||
-            isTimeSliceSelected;
+            || isTourDataSelected
+            || isTimeSliceSelected;
 
       _chkData_AllTimeSlices.setEnabled(isPartOfATourSelected);
 
       _chkData_Tour_ImportFileLocation.setEnabled(isPartOfATourSelected);
       _chkData_Tour_Markers.setEnabled(isPartOfATourSelected);
       _chkData_Tour_Calories.setEnabled(isPartOfATourSelected);
+      _chkData_Tour_Weather.setEnabled(isPartOfATourSelected);
 
       _chkData_TimeSlice_Battery.setEnabled(isTimeSlice);
       _chkData_TimeSlice_Cadence.setEnabled(isTimeSlice);
@@ -1020,9 +1043,10 @@ public class DialogReimportTours extends TitleAreaDialog {
       _chkData_TimeSlice_Gear.setEnabled(isTimeSlice);
       _chkData_TimeSlice_PowerAndPulse.setEnabled(isTimeSlice);
       _chkData_TimeSlice_PowerAndSpeed.setEnabled(isTimeSlice);
+      _chkData_TimeSlice_Radar.setEnabled(isTimeSlice);
       _chkData_TimeSlice_RunningDynamics.setEnabled(isTimeSlice);
       _chkData_TimeSlice_Swimming.setEnabled(isTimeSlice);
-      _chkData_TimeSlice_Temperature.setEnabled(isTimeSlice);
+      _chkData_TimeSlice_TemperatureFromDevice.setEnabled(isTimeSlice);
       _chkData_TimeSlice_TourTimerPauses.setEnabled(isTimeSlice);
       _chkData_TimeSlice_Training.setEnabled(isTimeSlice);
 
@@ -1050,12 +1074,7 @@ public class DialogReimportTours extends TitleAreaDialog {
 
       _pc = new PixelConverter(_parent);
 
-      _defaultListener = new SelectionAdapter() {
-         @Override
-         public void widgetSelected(final SelectionEvent e) {
-            enableControls();
-         }
-      };
+      _defaultListener = widgetSelectedAdapter(selectionEvent -> enableControls());
 
       _parent.addDisposeListener(disposeEvent -> {
          _imageLock_Closed.dispose();
@@ -1111,24 +1130,25 @@ public class DialogReimportTours extends TitleAreaDialog {
 
 // SET_FORMATTING_OFF
 
-               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Battery,           TourValueType.TIME_SLICES__BATTERY,          tourValueTypes);
-               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Cadence,           TourValueType.TIME_SLICES__CADENCE,          tourValueTypes);
-               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Elevation,         TourValueType.TIME_SLICES__ELEVATION,        tourValueTypes);
-               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Gear,              TourValueType.TIME_SLICES__GEAR,             tourValueTypes);
-               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_PowerAndPulse,     TourValueType.TIME_SLICES__POWER_AND_PULSE,  tourValueTypes);
-               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_PowerAndSpeed,     TourValueType.TIME_SLICES__POWER_AND_SPEED,  tourValueTypes);
-               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_RunningDynamics,   TourValueType.TIME_SLICES__RUNNING_DYNAMICS, tourValueTypes);
-               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Swimming,          TourValueType.TIME_SLICES__SWIMMING,         tourValueTypes);
-               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Temperature,       TourValueType.TIME_SLICES__TEMPERATURE,      tourValueTypes);
-               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_TourTimerPauses,   TourValueType.TIME_SLICES__TIMER_PAUSES,     tourValueTypes);
-               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Training,          TourValueType.TIME_SLICES__TRAINING,         tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Battery,                TourValueType.TIME_SLICES__BATTERY,                tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Cadence,                TourValueType.TIME_SLICES__CADENCE,                tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Elevation,              TourValueType.TIME_SLICES__ELEVATION,              tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Gear,                   TourValueType.TIME_SLICES__GEAR,                   tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_PowerAndPulse,          TourValueType.TIME_SLICES__POWER_AND_PULSE,        tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_PowerAndSpeed,          TourValueType.TIME_SLICES__POWER_AND_SPEED,        tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Radar,                  TourValueType.TIME_SLICES__RADAR,                  tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_RunningDynamics,        TourValueType.TIME_SLICES__RUNNING_DYNAMICS,       tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Swimming,               TourValueType.TIME_SLICES__SWIMMING,               tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_TemperatureFromDevice,  TourValueType.TIME_SLICES__TEMPERATURE_FROMDEVICE, tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_TourTimerPauses,        TourValueType.TIME_SLICES__TIMER_PAUSES,           tourValueTypes);
+               DialogUtils.addTourValueTypeFromCheckbox(_chkData_TimeSlice_Training,               TourValueType.TIME_SLICES__TRAINING,               tourValueTypes);
             }
 
-            DialogUtils.addTourValueTypeFromCheckbox(_chkData_Tour_Calories,           TourValueType.TOUR__CALORIES,                tourValueTypes);
-            DialogUtils.addTourValueTypeFromCheckbox(_chkData_Tour_Markers,            TourValueType.TOUR__MARKER,                  tourValueTypes);
-            DialogUtils.addTourValueTypeFromCheckbox(_chkData_Tour_ImportFileLocation, TourValueType.TOUR__IMPORT_FILE_LOCATION,    tourValueTypes);
+            DialogUtils.addTourValueTypeFromCheckbox(_chkData_Tour_Calories,           TourValueType.TOUR__CALORIES,             tourValueTypes);
+            DialogUtils.addTourValueTypeFromCheckbox(_chkData_Tour_Markers,            TourValueType.TOUR__MARKER,               tourValueTypes);
+            DialogUtils.addTourValueTypeFromCheckbox(_chkData_Tour_ImportFileLocation, TourValueType.TOUR__IMPORT_FILE_LOCATION, tourValueTypes);
+            DialogUtils.addTourValueTypeFromCheckbox(_chkData_Tour_Weather,            TourValueType.TOUR__WEATHER,              tourValueTypes);
 
-// SET_FORMATTING_ON
          }
 
          doReimport(tourValueTypes);
@@ -1139,23 +1159,27 @@ public class DialogReimportTours extends TitleAreaDialog {
 
    private void onDeselectAll_DataItems() {
 
-      _chkData_AllTimeSlices.setSelection(false);
-      _chkData_TimeSlice_Elevation.setSelection(false);
+      _chkData_AllTimeSlices                    .setSelection(false);
+      _chkData_TimeSlice_Elevation              .setSelection(false);
 
-      _chkData_Tour_Calories.setSelection(false);
-      _chkData_Tour_ImportFileLocation.setSelection(false);
-      _chkData_Tour_Markers.setSelection(false);
+      _chkData_Tour_Calories                    .setSelection(false);
+      _chkData_Tour_ImportFileLocation          .setSelection(false);
+      _chkData_Tour_Markers                     .setSelection(false);
+      _chkData_Tour_Weather                     .setSelection(false);
 
-      _chkData_TimeSlice_Battery.setSelection(false);
-      _chkData_TimeSlice_Cadence.setSelection(false);
-      _chkData_TimeSlice_Gear.setSelection(false);
-      _chkData_TimeSlice_PowerAndPulse.setSelection(false);
-      _chkData_TimeSlice_PowerAndSpeed.setSelection(false);
-      _chkData_TimeSlice_RunningDynamics.setSelection(false);
-      _chkData_TimeSlice_Swimming.setSelection(false);
-      _chkData_TimeSlice_Temperature.setSelection(false);
-      _chkData_TimeSlice_TourTimerPauses.setSelection(false);
-      _chkData_TimeSlice_Training.setSelection(false);
+      _chkData_TimeSlice_Battery                .setSelection(false);
+      _chkData_TimeSlice_Cadence                .setSelection(false);
+      _chkData_TimeSlice_Gear                   .setSelection(false);
+      _chkData_TimeSlice_PowerAndPulse          .setSelection(false);
+      _chkData_TimeSlice_PowerAndSpeed          .setSelection(false);
+      _chkData_TimeSlice_Radar                  .setSelection(false);
+      _chkData_TimeSlice_RunningDynamics        .setSelection(false);
+      _chkData_TimeSlice_Swimming               .setSelection(false);
+      _chkData_TimeSlice_TemperatureFromDevice  .setSelection(false);
+      _chkData_TimeSlice_TourTimerPauses        .setSelection(false);
+      _chkData_TimeSlice_Training               .setSelection(false);
+
+// SET_FORMATTING_ON
 
       enableControls();
    }
@@ -1221,30 +1245,32 @@ public class DialogReimportTours extends TitleAreaDialog {
       Util.getStateDate(_state, STATE_REIMPORT_TOURS_BETWEEN_DATES_UNTIL, LocalDate.now(), _dtTourDate_Until);
 
       // Data to re-import
-      final boolean isReimportEntireTour = _state.getBoolean(STATE_IS_IMPORT_ENTIRE_TOUR);
-      _chkData_AllTimeSlices              .setSelection(_state.getBoolean(STATE_IS_IMPORT_ALL_TIME_SLICES));
-      _rdoData_EntireTour                 .setSelection(isReimportEntireTour);
-      _rdoData_PartOfATour                .setSelection(isReimportEntireTour == false);
+      final boolean isReimportEntireTour =       _state.getBoolean(STATE_IS_IMPORT_ENTIRE_TOUR);
+      _chkData_AllTimeSlices                    .setSelection(_state.getBoolean(STATE_IS_IMPORT_ALL_TIME_SLICES));
+      _rdoData_EntireTour                       .setSelection(isReimportEntireTour);
+      _rdoData_PartOfATour                      .setSelection(isReimportEntireTour == false);
 
-      _chkData_Tour_Calories              .setSelection(_state.getBoolean(STATE_IS_IMPORT_TOUR__CALORIES));
-      _chkData_Tour_ImportFileLocation    .setSelection(_state.getBoolean(STATE_IS_IMPORT_TOUR__FILE_LOCATION));
-      _chkData_Tour_Markers               .setSelection(_state.getBoolean(STATE_IS_IMPORT_TOUR__MARKERS));
+      _chkData_Tour_Calories                    .setSelection(_state.getBoolean(STATE_IS_IMPORT_TOUR__CALORIES));
+      _chkData_Tour_ImportFileLocation          .setSelection(_state.getBoolean(STATE_IS_IMPORT_TOUR__FILE_LOCATION));
+      _chkData_Tour_Markers                     .setSelection(_state.getBoolean(STATE_IS_IMPORT_TOUR__MARKERS));
+      _chkData_Tour_Weather                     .setSelection(_state.getBoolean(STATE_IS_IMPORT_TOUR__WEATHER));
 
-      _chkData_TimeSlice_Battery          .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__BATTERY));
-      _chkData_TimeSlice_Cadence          .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__CADENCE));
-      _chkData_TimeSlice_Elevation        .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__ELEVATION));
-      _chkData_TimeSlice_Gear             .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__GEAR));
-      _chkData_TimeSlice_PowerAndPulse    .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__POWER_AND_PULSE));
-      _chkData_TimeSlice_PowerAndSpeed    .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__POWER_AND_SPEED));
-      _chkData_TimeSlice_RunningDynamics  .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__RUNNING_DYNAMICS));
-      _chkData_TimeSlice_Swimming         .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__SWIMMING));
-      _chkData_TimeSlice_Temperature      .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__TEMPERATURE));
-      _chkData_TimeSlice_Training         .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__TRAINING));
-      _chkData_TimeSlice_TourTimerPauses  .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__TIMER_PAUSES));
+      _chkData_TimeSlice_Battery                .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__BATTERY));
+      _chkData_TimeSlice_Cadence                .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__CADENCE));
+      _chkData_TimeSlice_Elevation              .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__ELEVATION));
+      _chkData_TimeSlice_Gear                   .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__GEAR));
+      _chkData_TimeSlice_PowerAndPulse          .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__POWER_AND_PULSE));
+      _chkData_TimeSlice_PowerAndSpeed          .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__POWER_AND_SPEED));
+      _chkData_TimeSlice_Radar                  .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__RADAR));
+      _chkData_TimeSlice_RunningDynamics        .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__RUNNING_DYNAMICS));
+      _chkData_TimeSlice_Swimming               .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__SWIMMING));
+      _chkData_TimeSlice_TemperatureFromDevice  .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__TEMPERATURE_FROMDEVICE));
+      _chkData_TimeSlice_Training               .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__TRAINING));
+      _chkData_TimeSlice_TourTimerPauses        .setSelection(_state.getBoolean(STATE_IS_IMPORT_TIME_SLICE__TIMER_PAUSES));
 
       // Skip tours for which the import file is not found
-      _chkSkipTours_With_ImportFile_NotFound .setSelection(_state.getBoolean(STATE_IS_SKIP_TOURS_WITH_IMPORTFILE_NOTFOUND));
-      _chkLogDetails                         .setSelection(_state.getBoolean(STATE_IS_LOG_DETAILS));
+      _chkSkipTours_With_ImportFile_NotFound    .setSelection(_state.getBoolean(STATE_IS_SKIP_TOURS_WITH_IMPORTFILE_NOTFOUND));
+      _chkLogDetails                            .setSelection(_state.getBoolean(STATE_IS_LOG_DETAILS));
 
       enableControls();
 
@@ -1269,19 +1295,21 @@ public class DialogReimportTours extends TitleAreaDialog {
       _state.put(STATE_IS_IMPORT_TOUR__CALORIES,               _chkData_Tour_Calories.getSelection());
       _state.put(STATE_IS_IMPORT_TOUR__FILE_LOCATION,          _chkData_Tour_ImportFileLocation.getSelection());
       _state.put(STATE_IS_IMPORT_TOUR__MARKERS,                _chkData_Tour_Markers.getSelection());
+      _state.put(STATE_IS_IMPORT_TOUR__WEATHER,                _chkData_Tour_Weather.getSelection());
 
-      _state.put(STATE_IS_IMPORT_ALL_TIME_SLICES,              _chkData_AllTimeSlices.getSelection());
-      _state.put(STATE_IS_IMPORT_TIME_SLICE__BATTERY,          _chkData_TimeSlice_Battery.getSelection());
-      _state.put(STATE_IS_IMPORT_TIME_SLICE__CADENCE,          _chkData_TimeSlice_Cadence.getSelection());
-      _state.put(STATE_IS_IMPORT_TIME_SLICE__ELEVATION,        _chkData_TimeSlice_Elevation.getSelection());
-      _state.put(STATE_IS_IMPORT_TIME_SLICE__GEAR,             _chkData_TimeSlice_Gear.getSelection());
-      _state.put(STATE_IS_IMPORT_TIME_SLICE__POWER_AND_PULSE,  _chkData_TimeSlice_PowerAndPulse.getSelection());
-      _state.put(STATE_IS_IMPORT_TIME_SLICE__POWER_AND_SPEED,  _chkData_TimeSlice_PowerAndSpeed.getSelection());
-      _state.put(STATE_IS_IMPORT_TIME_SLICE__RUNNING_DYNAMICS, _chkData_TimeSlice_RunningDynamics.getSelection());
-      _state.put(STATE_IS_IMPORT_TIME_SLICE__SWIMMING,         _chkData_TimeSlice_Swimming.getSelection());
-      _state.put(STATE_IS_IMPORT_TIME_SLICE__TEMPERATURE,      _chkData_TimeSlice_Temperature.getSelection());
-      _state.put(STATE_IS_IMPORT_TIME_SLICE__TIMER_PAUSES,     _chkData_TimeSlice_TourTimerPauses.getSelection());
-      _state.put(STATE_IS_IMPORT_TIME_SLICE__TRAINING,         _chkData_TimeSlice_Training.getSelection());
+      _state.put(STATE_IS_IMPORT_ALL_TIME_SLICES,                    _chkData_AllTimeSlices.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__BATTERY,                _chkData_TimeSlice_Battery.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__CADENCE,                _chkData_TimeSlice_Cadence.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__ELEVATION,              _chkData_TimeSlice_Elevation.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__GEAR,                   _chkData_TimeSlice_Gear.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__POWER_AND_PULSE,        _chkData_TimeSlice_PowerAndPulse.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__POWER_AND_SPEED,        _chkData_TimeSlice_PowerAndSpeed.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__RADAR,                  _chkData_TimeSlice_Radar.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__RUNNING_DYNAMICS,       _chkData_TimeSlice_RunningDynamics.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__SWIMMING,               _chkData_TimeSlice_Swimming.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__TEMPERATURE_FROMDEVICE, _chkData_TimeSlice_TemperatureFromDevice.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__TIMER_PAUSES,           _chkData_TimeSlice_TourTimerPauses.getSelection());
+      _state.put(STATE_IS_IMPORT_TIME_SLICE__TRAINING,               _chkData_TimeSlice_Training.getSelection());
 
       // Skip tours for which the import file is not found
       _state.put(STATE_IS_SKIP_TOURS_WITH_IMPORTFILE_NOTFOUND, _chkSkipTours_With_ImportFile_NotFound.getSelection());
